--- a/thPyCh2_compsci.ipynb
+++ b/thPyCh2_compsci.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -45,18 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "50\n"
      ]
     }
    ],
    "source": [
+    "#print(x)\n",
+    "\n",
+    "x = 2\n",
+    "x = 7\n",
+    "z = 50\n",
+    "x = z\n",
     "print(x)"
    ]
   },
@@ -263,21 +271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21\n",
-      "7\n",
-      "2.0\n"
+      "This is my testing script\n",
+      "4 + 1 equals 5\n"
      ]
     }
    ],
    "source": [
-    "import testing_script"
+    "import testing_script\n",
+    "my_local_var = testing_script.my_test_variable"
    ]
   },
   {
@@ -297,6 +305,36 @@
    ],
    "source": [
     "import practice_script3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from testing_script import my_test_variable\n",
+    "my_test_variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from testing_script import *"
    ]
   },
   {
@@ -401,6 +439,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to literal (4061779768.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/2j/rgdd494d7nj6ss812c9b9d6h0000gn/T/ipykernel_4184/4061779768.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    42 = n\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 42 = n\n",
+    "# x = y = 1\n",
+    "# x * y\n",
+    "# print(\"Hello World\");\n",
+    "# print(\"Hello WOrld\")."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -412,10 +472,113 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "523.5987755982989\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "volume_of_sphere = (4/3) * (math.pi) * (5**3)\n",
+    "print(volume_of_sphere)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "945.4499999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "discount = 24.95 * .40\n",
+    "book_price = 24.95 - discount\n",
+    "first_copy = book_price + 3\n",
+    "fifty_nine_other_copies = (book_price + 0.75) * 59\n",
+    "price_of_60_books = first_copy + fifty_nine_other_copies\n",
+    "print(price_of_60_books)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It takes 38.1 minutes to get home.\n",
+      "6:52 AM plus 38.06 minutes is about 7:30 AM\n",
+      "You will get home at 7:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_to_get_home = (8.25 * 2) + (3 * 7.2) \n",
+    "time_you_get_home = 360.87 + time_to_get_home\n",
+    "print(\"It takes \" + str(time_to_get_home) + \" minutes to get home.\")\n",
+    "print(\"6:52 AM plus 38.06 minutes is about 7:30 AM.\")\n",
+    "converted_time_to_get_home = \"7:30\"\n",
+    "print(\"You will get home at \" + str((converted_time_to_get_home)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# User input!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here's some text\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Here's some text\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_updated = \"H\" + x[1:]\n",
+    "x_updated"
    ]
   },
   {
@@ -454,14 +617,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type a number! 5\n"
+      "type a number! 23\n"
      ]
     }
    ],
@@ -471,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'53'"
+       "'233'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,14 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a one or two digit number -5\n"
+      "Enter a one or two digit number 42\n"
      ]
     }
    ],
@@ -564,11 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_int = int(x)"
+    "x_int = int(-3)"
    ]
   },
   {
@@ -619,6 +782,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is negative!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Sequential conditionals\n",
+    "if(x_int == 0):\n",
+    "    print(\"x is zero!\")\n",
+    "else:\n",
+    "    if(x_int > 0):\n",
+    "        print(\"x is positive!\")\n",
+    "    else:\n",
+    "        print(\"x is negative!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a number \n",
+      "5\n",
+      "x is positive\n",
+      "x is not big\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested if/else\n",
+    "# scenario - want to classify pos/negative AND BIG or not-Big\n",
+    "big = 100\n",
+    "x = (input('enter a number \\n'))\n",
+    "\n",
+    "if (int(x) > 0):\n",
+    "    # x must be positive \n",
+    "    print('x is positive')\n",
+    "    if (int(x) >= big):\n",
+    "        print('x is big')\n",
+    "    else:\n",
+    "        print('x is not big')\n",
+    "else:\n",
+    "    # x must be non-positive\n",
+    "    print('x is non-positive')\n",
+    "    if x <= big: \n",
+    "        # xi is as large or larger in magnitude than big = 100\n",
+    "        print('x is big! (i.e. in magnitude)')\n",
+    "    else:\n",
+    "        print('x is not big (in magnitude)')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -637,15 +863,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-60d2317a195e>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-60d2317a195e>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    if(x_int == 0:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# new function for string -  len() short for length, finds the length of the variable \n",
+    "# print(len(str(x)))\n",
+    "# print(len('Hello World!\\n'))\n",
+    "# print(len('Hello World!\\\\n'))\n",
+    "len('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a one or two digit number -2\n",
+      "Your number is negative and has 1 digit.\n"
      ]
     }
    ],
@@ -672,6 +922,13 @@
     "    else:\n",
     "        print(\"Your number is negative and has more than 1 digit.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -727,9 +984,11 @@
     "print(7 % 2) # 3 remainder 1\n",
     "print(11 % 3) # 3 remainder 2\n",
     "#This is very useful for checking whether or not a number is evenly divisible by another\n",
-    "x = int(input(\"Enter an integer\"))\n",
+    "x = float(int(input(\"Enter an integer\")))\n",
     "if(x % 2 == 0):\n",
-    "    print(\"x is even\")"
+    "    print(\"x is even\")\n",
+    "elif\n",
+    "    "
    ]
   },
   {
@@ -749,7 +1008,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -763,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
